<resources>
    <string name="app_name">EarningApp</string>
    <string name="total_earned">Total Earned</string>
    <string name="potencial_earned">Potancial Earned</string>
    <string name="maximum_earned">Maximum earnings %d €!</string>
    <string name="invited">Invited</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="help">How To Works?</string>
    <string name="invite">Invite</string>
    <string name="date">24 September 2022</string>
</resources>