<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_blue_gradient"
        android:paddingBottom="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="32dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivBack" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotalEarnedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="50dp"
            android:text="@string/total_earned"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/tvPotencialEarnedTitle"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBack" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPotencialEarnedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="50dp"
            android:text="@string/potencial_earned"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvTotalEarnedTitle"
            app:layout_constraintTop_toBottomOf="@id/ivBack" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotalEarned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvTotalEarnedTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTotalEarnedTitle"
            tools:text="330 €" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPotancialEarned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tvPotencialEarnedTitle"
            app:layout_constraintTop_toBottomOf="@id/tvPotencialEarnedTitle"
            tools:text="270 €" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvClaim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="You can claim!"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_dynamic"
            app:layout_constraintStart_toStartOf="@id/tvTotalEarned"
            app:layout_constraintTop_toBottomOf="@id/tvTotalEarned" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMaxEarnings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/tvPotancialEarned"
            app:layout_constraintTop_toBottomOf="@id/tvPotancialEarned"
            tools:text="Maximum earnings 600 €!" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/clTop"
        app:layout_constraintTop_toBottomOf="@id/clTop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view">

        <include
            layout="@layout/item_earning"
            android:visibility="invisible" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvInvited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:paddingHorizontal="32dp"
        android:text="@string/invited"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/clBottom"
        app:layout_constraintStart_toStartOf="@id/clBottom" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/layout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEarnings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="24dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/clTerms"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="7"
            tools:listitem="@layout/item_earning" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTerms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginBottom="12dp"
            android:background="@color/white_1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="10dp"
            app:layout_constraintBottom_toTopOf="@id/tvButton"
            app:layout_constraintEnd_toStartOf="@id/clHelp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_terms"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/blue_3" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:gravity="center"
                android:text="@string/terms"
                android:textColor="@color/blue_3"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivTerms" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clHelp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginBottom="12dp"
            android:background="@color/white_1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="10dp"
            app:layout_constraintBottom_toTopOf="@id/tvButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/clTerms">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_help"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/blue_3" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHowto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:gravity="center"
                android:text="@string/help"
                android:textColor="@color/blue_3"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivHelp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_orange_gradient"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/invite"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>